--- a/ResterauntReview.dl/ResterauntReview.dl.csproj
+++ b/ResterauntReview.dl/ResterauntReview.dl.csproj
@@ -87,6 +87,10 @@
     <Compile Include="Migrations\201804232032142_added ResterauntId.Designer.cs">
       <DependentUpon>201804232032142_added ResterauntId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804241626275_Added Columns.cs" />
+    <Compile Include="Migrations\201804241626275_Added Columns.Designer.cs">
+      <DependentUpon>201804241626275_Added Columns.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Resteraunt.cs" />
     <Compile Include="Models\Review.cs" />
@@ -119,6 +123,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804232032142_added ResterauntId.resx">
       <DependentUpon>201804232032142_added ResterauntId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804241626275_Added Columns.resx">
+      <DependentUpon>201804241626275_Added Columns.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
