--- a/RestarauntReviews.bl/RestarauntReviews.bl.csproj
+++ b/RestarauntReviews.bl/RestarauntReviews.bl.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ErrorHandling\IErrorManager.cs" />
     <Compile Include="IResterauntFunctions.cs" />
     <Compile Include="IReviewFunctions.cs" />
+    <Compile Include="IuserInputHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResterauntFunctions.cs" />
     <Compile Include="ReviewFunctions.cs" />
