--- a/ResterauntReview.dl/ResterauntReview.dl.csproj
+++ b/ResterauntReview.dl/ResterauntReview.dl.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.3.0\lib\portable-net45+win8+wp8+wpa81\System.Threading.Tasks.Extensions.dll</HintPath>
@@ -93,7 +94,25 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Resteraunt.cs" />
+    <Compile Include="Models\ResterauntEntity.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResterauntEntity.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ResterauntEntity.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResterauntEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ResterauntEntity.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ResterauntEntity.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Models\Review.cs" />
+    <Compile Include="Models\vw_AverageRatings.cs">
+      <DependentUpon>ResterauntEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IDataContext.cs" />
     <Compile Include="Repositories\ResterauntRepository.cs" />
@@ -102,6 +121,13 @@
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
+    </None>
+    <EntityDeploy Include="Models\ResterauntEntity.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>ResterauntEntity.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Models\ResterauntEntity.edmx.diagram">
+      <DependentUpon>ResterauntEntity.edmx</DependentUpon>
     </None>
     <None Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -127,6 +153,21 @@
     <EmbeddedResource Include="Migrations\201804241626275_Added Columns.resx">
       <DependentUpon>201804241626275_Added Columns.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Models\ResterauntEntity.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ResterauntEntity.edmx</DependentUpon>
+      <LastGenOutput>ResterauntEntity.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\ResterauntEntity.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>ResterauntEntity.edmx</DependentUpon>
+      <LastGenOutput>ResterauntEntity.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
