--- a/RestarauntReviews.bl/RestarauntReviews.bl.csproj
+++ b/RestarauntReviews.bl/RestarauntReviews.bl.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResterauntFunctions.cs" />
     <Compile Include="ReviewFunctions.cs" />
+    <Compile Include="SerializeAndDeserialize.cs" />
     <Compile Include="UserInputHandler.cs" />
   </ItemGroup>
   <ItemGroup>
