--- a/RestarauntReviews.bl/RestarauntReviews.bl.csproj
+++ b/RestarauntReviews.bl/RestarauntReviews.bl.csproj
@@ -70,6 +70,7 @@
     <Compile Include="IReviewFunctions.cs" />
     <Compile Include="IuserInputHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResterauntCrudOps.cs" />
     <Compile Include="ResterauntFunctions.cs" />
     <Compile Include="ReviewFunctions.cs" />
     <Compile Include="SerializeAndDeserialize.cs" />
