--- a/RestarauntReviews.pl/NLog.config
+++ b/RestarauntReviews.pl/NLog.config
@@ -16,7 +16,26 @@
   for information on customizing logging rules and outputs.
    -->
   <targets>
-
+    <target name="database"
+               xsi:type="Database"
+               connectionStringName="DataContext"
+               commandText="exec dbo.InsertLog
+                            @level,
+                            @callSite,
+                            @type,
+                            @message,
+                            @stackTrace,
+                            @innerException,
+                            @additionalInfo">
+      <parameter name="@level" layout="${level}" />
+      <parameter name="@callSite" layout="${callsite}" />
+      <parameter name="@type" layout="${exception:format=type}" />
+      <parameter name="@message" layout="${exception:format=message}" />
+      <parameter name="@stackTrace" layout="${exception:format=stackTrace}" />
+      <parameter name="@innerException"
+                  layout="${exception:format=:innerFormat=ShortType,Message,Method:MaxInnerExceptionLevel=1:InnerExceptionSeparator=}" />
+      <parameter name="@additionalInfo" layout="${message}" />
+    </target>
     <!--
     add your targets here
     See https://github.com/nlog/NLog/wiki/Targets for possible targets.
@@ -37,5 +56,6 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
     -->
+    <logger levels="Error,Warn,Fatal" name="databaseLogger" writeTo="database"/>
   </rules>
 </nlog>
